--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,11 +49,14 @@ dependencies:
   shared_preferences:
   jwt_decoder:
   dart_ipify: ^1.1.1
+  mongo_dart: ^0.9.2
+  line_awesome_flutter: ^2.0.0
   
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
