--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_polyline_points: ^1.0.0
+  # flutter_polyline_points: ^1.0.0
   google_maps_flutter: ^2.1.1
   # location: ^4.4.0
   geolocator: ^10.0.1
@@ -51,6 +51,8 @@ dependencies:
   dart_ipify: ^1.1.1
   mongo_dart: ^0.9.2
   line_awesome_flutter: ^2.0.0
+  google_fonts: ^6.0.0
+  provider: ^6.0.5
   
 
 dev_dependencies:
@@ -74,6 +76,7 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/
+    - assets/images/online.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
