--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,13 @@ dependencies:
   line_awesome_flutter: ^2.0.0
   google_fonts: ^6.0.0
   provider: ^6.0.5
+  socket_io_client: ^2.0.3+1
+  path_provider: ^2.1.1
+  path:
+  video_player: ^2.7.2
+  camera: ^0.10.5+5
+  flutter_svg: ^2.0.7
+  emoji_picker_flutter: ^1.6.2
   
 
 dev_dependencies:
@@ -77,6 +84,8 @@ flutter:
     - assets/icons/
     - assets/images/
     - assets/images/online.png
+    - assets/person.svg
+    - assets/whatsapp_background.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -90,16 +99,13 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   # fonts:
-  #   - family: Schyler
+  #   - family: OpenSans
   #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  #       - asset: fonts/OpenSans-Bold.ttf
+  #       - asset: fonts/OpenSans-Regular.ttf
+  #       - asset: fonts/OpenSans-SemiBold.ttf
+  #       - asset: fonts/OpenSans-Italic.ttf
   #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
