--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ dependencies:
   camera: ^0.10.5+5
   flutter_svg: ^2.0.7
   emoji_picker_flutter: ^1.6.2
+  image_picker: ^0.8.2
+
   
 
 dev_dependencies:
